# regex-machine

./: .clang-tidy  .codespellrc  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.example.json  LICENSE.md  README.md
.github/workflows/: ci.yml
cmake/: coverage.cmake  install-config.cmake  install-rules.cmake  prelude.cmake  variables.cmake
include/: regex_machine.hpp
include/internal/: nfa.hpp  nfa_creation.hpp  parser.hpp  parsing.hpp  scanner.hpp
include/regex-machine/: regex-machine.hpp
include/regex_machine/: nfa.hpp  parsing.hpp  regex_machine.hpp
test/: CMakeLists.txt
test/source/: nfa_creation_test.cpp  nfa_test.cpp  parser_test.cpp  parsing_test.cpp  regex-machine_test.cpp  regex_machine_test.cpp  scanner_test.cpp
